# screencast

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  Types.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/ffmpeg/lib/pkgconfig/: Imath.pc  OpenEXR.pc  PyImath.pc  SPIRV-Tools-shared.pc  SPIRV-Tools.pc  SvtAv1Dec.pc  SvtAv1Enc.pc  aom.pc  caca++.pc  caca.pc  dav1d.pc  dovi.pc  frei0r.pc  fribidi.pc  gdk-pixbuf-2.0.pc  gio-2.0.pc  gio-windows-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-export-2.0.pc  gmodule-no-export-2.0.pc  gnutls.pc  gobject-2.0.pc  gthread-2.0.pc  harfbuzz-cairo.pc  harfbuzz-gobject.pc  harfbuzz-icu.pc  harfbuzz-subset.pc  harfbuzz.pc  lame.pc  lcms2.pc  libass.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libbluray.pc  libdeflate.pc  libexif.pc  (+58 more)
src-tauri/src/: main.rs
src-tauri/src/commands/: annotation.rs  conversion.rs  native_playback.rs  recording.rs  system_info.rs  window_capture.rs  windows_api.rs  windows_api_new.rs
src-tauri/src/commands/recording/: linux.rs  macos.rs  win.rs
src-tauri/src/commands/window_capture/: linux.rs  macos.rs  win.rs
src-tauri/src/services/: loopback_audio.rs  pdf_annotations.rs  trash.rs  utility.rs
src-tauri/src/views/: completed_recording.html  completed_recording.tsx
src/components/: ActiveRecordingState.tsx  AnnotationOverlayWindow.tsx  BottomDocker.tsx  CameraOverlayPreview.tsx  ConversionDialog.tsx  EnhancedScreenOptions.tsx  ImprovedScreenSelector.tsx  OsInfo.tsx  PdfAnnotator.tsx  RecordingOverlayWindow.tsx  ScreenshotOverlayWindow.tsx  VideoPlayer.tsx  VideoPlayerCustom.tsx  player.css
src/components/Modals/: FileModal.tsx  PlayerOverlay.tsx  ScreenOptions.tsx  SettingsModal.tsx
src/components/custom/: Alert.tsx  Dropdown.tsx  PlaytimeSettings.tsx  Toast.tsx
src/components/docker/: FileToolsDocker.tsx  RecordingDocker.tsx  VideoTimelineDocker.tsx  fileToolsConfig.ts
src/components/pdf/: AnnotationToolbar.tsx  ColorSwatchPicker.tsx  ImageAnnotationEditor.tsx  PdfPage.tsx  PdfSidebar.tsx  PdfThumbnail.tsx  TextNoteEditor.tsx
src/contexts/: ThemeContext.tsx
src/handlers/: keyboardHandlers.ts  mediaHandlers.ts  pdfAnnotationHandlers.ts
src/hooks/: useAnnotationStore.ts  useAutoHideControls.ts  useNativePlaybackEngine.ts  usePageRenderCache.ts  usePdfDocument.ts  useStrokeCapture.ts
src/pages/: Dashboard.tsx
src/utils/: Formater.ts  appSettings.ts  fileCategory.ts  imageObjectCache.ts  pdfAnnotationTypes.ts  videoUtils.ts
