[package]
name = "Briefcast"
version = "0.0.0"
description = "A screen recording and streaming application for easy use."
authors = ["Temidayo Oyewo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "global-shortcut-all", "window-hide", "window-set-focus", "window-create", "window-close", "protocol-asset", "window-show", "dialog-message", "shell-open", "window-start-dragging", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
windows = {version="0.57.0", features = ["Win32_System_SystemInformation", "Win32_System_Console", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Power", "Win32_Storage_FileSystem", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Devices_Properties", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Storage_Xps", "Win32_Graphics_Dwm"] }
image = "0.25.1"
log = "0.4.22"
simplelog = "0.12.2"
urlencoding = "2.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
