[package]
name = "Briefcast"
version = "0.0.0"
description = "A screen recording and streaming application for easy use."
authors = ["Temidayo Oyewo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-fullscreen", "dialog-open", "global-shortcut-all", "window-hide", "window-set-focus", "window-create", "window-close", "protocol-asset", "window-show", "dialog-message", "shell-open", "window-start-dragging", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
image = "0.25.1"
log = "0.4.22"
simplelog = "0.12.2"
urlencoding = "2.1"
base64 = "0.22"

# Win32 bindings — only meaningful (and only compilable) on Windows. Unconditional before this,
# which meant `cargo build` couldn't even start on macOS/Linux regardless of how much of the
# actual source was already portable.
[target.'cfg(windows)'.dependencies]
windows = {version="0.57.0", features = ["Win32_System_SystemInformation", "Win32_System_Console", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Power", "Win32_Storage_FileSystem", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Devices_Properties", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_Storage_Xps", "Win32_Graphics_Dwm"] }

# Pure-Rust X11 protocol client (talks directly to the X server over its own socket transport —
# no libX11/libxcb .so needed at build or run time) — the closest Linux analog to using the
# `windows` crate for direct Win32 access above. Only the extensions actually used are enabled:
# randr for monitor geometry, composite for window screenshot capture.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr", "composite"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
